# SmartTargetVision

./: .gitignore  README.md
Drone-MCP/: .dockerignore  InitialPlan.md  MCP-Builder.md  README.md  drone_runtime_server.py  pyproject.toml  requirements-mcp.txt  requirements-operator.txt  visual_operator_server.py
Drone-MCP/.tmp/: probe-bundle.tgz  vast-vm-tunnel.pid
Drone-MCP/docker/: compose.sim.yml  mcp-entrypoint.sh  mcp-server.Dockerfile  operator-web.Dockerfile  sim-monocam.Dockerfile  sim-visual.Dockerfile  visual-entrypoint.sh
Drone-MCP/docs/: QUICKSTART_VAST.md  SESSION_CONTEXT.md  simulator-baseline.md
Drone-MCP/scripts/: bootstrap_vast_vm.sh  deploy_vast_vm.py  manage_simulator.py  open_vast_vm_tunnel.ps1  run_remote_operator_stack.sh  smoke_test_monocam.py  smoke_test_operator_web.py  smoke_test_runtime_mcp.py  smoke_test_visual_sim.py  vast_connect.ps1
Drone-MCP/src/drone_mcp/: __init__.py  camera_capture.py  flight_control.py  navigation.py  operator_chat.py  recording.py  runtime_tool_service.py  sim_runtime.py  vast_vm.py  vision_tracking.py  visual_checks.py
Drone-MCP/tests/: test_camera_capture.py  test_flight_control.py  test_navigation_and_recording.py  test_operator_chat.py  test_runtime_tool_service.py  test_sim_runtime.py  test_vast_vm.py  test_vision_tracking.py  test_visual_checks.py  test_visual_operator_server.py
Drone-MCP/ui/: app.js  index.html  styles.css
docs/: identity_engine_spec.md
face_recognition/: .gitignore  README.md  __init__.py  app.py  config.yaml  requirements.txt  smoke_test.py
(+40 files in other folders)
