[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-mcp"
version = "0.1.0"
description = "Deterministic runtime layers for simulated drone control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mavsdk>=2.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
